--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: white;
   color: black;
-  font-family: Verdana;
+  font-family: "MS Gothic";
   text-align: center
 }
 li {
